worker-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: worker
  namespace: user-hao-li
spec:
  replicas: 25
  selector:
    matchLabels:
      app.oam.dev/component: worker
  template:
    metadata:
      labels:
        app.oam.dev/component: worker
        app.oam.dev/name: worker
    spec:
      containers:
      - command:
        - bash
        - /config/runner.sh
        image: metabit-registry-registry-vpc.cn-zhangjiakou.cr.aliyuncs.com/metabit-public/brewer-server:latest
        imagePullPolicy: Always
        name: worker
        volumeDevices: []
        volumeMounts:
        - mountPath: /config
          name: configmap-config-worker
      volumes:
      - configMap:
          defaultMode: 420
          name: config-worker
        name: configmap-config-worker
