work-queue-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: work-queue
  namespace: user-hao-li
spec:
  replicas: 1
  selector:
    matchLabels:
      app.oam.dev/component: work-queue
  template:
    metadata:
      labels:
        app.oam.dev/component: work-queue
        app.oam.dev/name: work-queue
    spec:
      containers:
      - command:
        - bash
        - /config/runner.sh
        env: []
        image: metabit-registry-registry-vpc.cn-zhangjiakou.cr.aliyuncs.com/metabit-public/brewer-server:latest
        imagePullPolicy: Always
        name: work-queue
        ports:
        - containerPort: 8009
          name: port-8009
          protocol: TCP
        volumeDevices: []
        volumeMounts:
        - mountPath: /config
          name: configmap-config-work-queue
      volumes:
      - configMap:
          defaultMode: 420
          name: config-work-queue
        name: configmap-config-work-queue

---
## From the auxiliary workload 
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: work-queue
  namespace: user-hao-li
spec:
  ports:
  - name: port-8009
    port: 8009
    protocol: TCP
    targetPort: 8009
  selector:
    app.oam.dev/component: work-queue
  type: ClusterIP
